Fri Apr 27 15:16:10 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Project name change to Omseek.

Wed Apr 11 09:06:37 BST 2001 Chris Emerson <chris.emerson@omsee.com>

	* Implemented deleting of items from postlists, and added some
	  tests to check that it works properly.
	
	* Fixed a potential memory leak in QuartzPostList if an exception
	  was thrown from the constructor.

	* BackendManager now sets the quartz_logfile setting, to make
	  the logs available from the testsuite.

	* Added mention of quartz_logfile to docs/omsettings

	* Removed a bad assert from InMemoryDatabase::get_doclength()

Mon Apr  9 21:48:18 BST 2001 Chris Emerson <chris.emerson@omsee.com>

	* Added #include <cmath> to testutils.cc

Fri Mar 30 17:37:24 BST 2001 Olly Betts

	* Added extra/.cvsignore

Fri Mar 30 17:22:13 BST 2001 Olly Betts

	* Disabled allocation checking of new[] and delete[] since some STL
	  implementations use them which leads to leaks being reported where
	  none exist.  This is addressable longer term...

Thu Mar 29 19:05:46 BST 2001  Richard Boulton <richard.boulton@omsee.com>

	* Add "extra" directory to om source tree, to hold extra libraries
	  for use with omsee, which aren't part of the core.

	* Put a query parser into "extra".  This is roughly the parser
	  from omega.  Needs some work: in particular, it needs to be
	  made reentrant.

	* Added extra/ directory to top level Makefile.am and configure.in.
	  Added AC_PROG_YACC to Makefile.am

	* Add includes of required header files to omquery.h.

Wed Mar 28 17:15:22 BST 2001  Richard Boulton <richard.boulton@omsee.com>

	* Modifications to OmQuery.  Remove the isbool flag: there is
	  no longer any need for the concept of a "pure boolean query".
	  The same effect as was obtained by setting isbool can be
	  obtained by setting the match_weighting_scheme parameter to
	  bool.
	  
	* Also, undefined queries may no longer be used when
	  building up composite queries; the correct behaviour for this