@@ -2,6 +2,13 @@ Email about this project should be directed first to the
 omseek-discuss mailing list (see
 <http://lists.sourceforge.net/mailman/listinfo/omseek-discuss>).
 
+Omseek has been developed by many individuals who voluntarily contributed
+their code to the Omseek project. These people are:
+	Hein Ragas <hragas@users.sourceforge.net>
+
+The Omseek project makes use of the Sourceforge infrastructure. Visit the
+Omseek project webpage at http://sourceforge.net/projects/omseek/
+
 Prior to moving to SourceForge, the Omseek codebase was developed by a
 team at Brightstation PLC:
 
